# emasm-rs

./: .gitignore  Cargo.toml  README.md
crates/edisasm-cli/: Cargo.toml
crates/edisasm-cli/src/: main.rs
crates/emasm-cli/: Cargo.toml
crates/emasm-cli/src/: main.rs
crates/emasm-common/: Cargo.toml
crates/emasm-common/src/: assembler.rs  encodable.rs  lib.rs  opcodes.rs  types.rs
crates/emasm-macros/: Cargo.toml
crates/emasm-macros/src/: lib.rs  parser.rs
src/: lib.rs
src/tests/: basic_assembly.rs  bytecode_analysis.rs  exact_failing_case.rs  interpolation.rs  label_offset_debug.rs  label_resolution.rs  large_hex_literals.rs  mod.rs  nested_segments.rs  placeholder_size_test.rs  revm_integration.rs
