[workspace]
members = [
    "crates/emasm-common",
    "crates/emasm-macros",
    "crates/emasm-cli",
    "crates/edisasm-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = []
license = "MIT OR Apache-2.0"

[workspace.dependencies]
emasm-common = { path = "crates/emasm-common" }
emasm-macros = { path = "crates/emasm-macros" }
alloy-primitives = "0.7"
hex = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
clap = { version = "4.5", features = ["derive"] }
revm = { version = "14.0", features = ["std"] }
anyhow = "1.0"

[package]
name = "emasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
emasm-common = { workspace = true }
emasm-macros = { workspace = true }

[dev-dependencies]
revm = { workspace = true }
alloy-primitives = { workspace = true }
hex = { workspace = true }
